--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
       <h1>Let's take a quick quiz</h1>
       <div id="quiz-container"></div>
-      <button id="submit-btn">Submit</button>
+      <button id="submit-btn"></button>
       <div id="result-container"></div>
     </div>
     <script src="script.js"></script>
