--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiz App</title>
+    <title>Read Quest</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,6 +16,5 @@
       <div id="result-container"></div>
     </div>
     <script src="script.js"></script>
-    <script type="module" src="../server/server.js"></script>
   </body>
 </html>
